[gd_scene load_steps=10 format=3 uid="uid://bilxdps8h4csj"]

[ext_resource type="Theme" uid="uid://evv5alve252b" path="res://main/theme/theme.tres" id="1_wh3mp"]
[ext_resource type="Script" path="res://main/world/ui/pause_menu/level_submenu/level_submenu.gd" id="1_xesah"]
[ext_resource type="Shader" path="res://main/world/ui/pause_menu/level_submenu/liquid_bubble.gdshader" id="3_lw3tn"]
[ext_resource type="AudioStream" uid="uid://b52h2qinfu6iw" path="res://main/theme/sound/cancel.tres" id="4_jtl14"]

[sub_resource type="Gradient" id="Gradient_v6maa"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.169863, 0.386301, 0.586301, 0.726027, 0.890411)
colors = PackedColorArray(0.207843, 0.258824, 0.352941, 1, 0.329412, 0.301961, 0.415686, 1, 0.670588, 0.486275, 0.494118, 1, 0.854902, 0.690196, 0.560784, 1, 0.984314, 0.835294, 0.654902, 1, 1, 0.882353, 0.788235, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_11ede"]
gradient = SubResource("Gradient_v6maa")

[sub_resource type="Gradient" id="Gradient_5rpvf"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.322097, 0.595506, 0.842697)
colors = PackedColorArray(0.0196078, 0.0784314, 0.133333, 1, 0.0431373, 0.176471, 0.278431, 1, 0.101961, 0.231373, 0.345098, 1, 0.207843, 0.258824, 0.352941, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_f70ct"]
gradient = SubResource("Gradient_5rpvf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wof0l"]
shader = ExtResource("3_lw3tn")
shader_parameter/fV = 0.62
shader_parameter/col_a = Color(0.564706, 0.407843, 0.486275, 1)
shader_parameter/col_b = Color(0.329412, 0.301961, 0.415686, 1)
shader_parameter/col_c = Color(1, 1, 1, 1)
shader_parameter/gradient = SubResource("GradientTexture1D_11ede")
shader_parameter/gradient2 = SubResource("GradientTexture1D_f70ct")

[node name="LevelSubmenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wh3mp")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_xesah")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 1

[node name="XPTitle" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.882353, 0.788235, 1)
text = "xp"
horizontal_alignment = 1

[node name="XPLabel" type="Label" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "999/999"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "level + xp"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 1

[node name="LevelTitle" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.882353, 0.788235, 1)
text = "lvl"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "99"
horizontal_alignment = 1

[node name="Bubble" type="ColorRect" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_wof0l")
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4

[node name="CancelPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_jtl14")
bus = &"UI Sound Effect"
